fixed shadensfreibonus on small viewports

--- a/src/containers/BusinessWheel/style.css
+++ b/src/containers/BusinessWheel/style.css
@@ -23,7 +23,7 @@
 
 @media all and (min-width: 720px) {
   .centerContainer p {
-    font-size: 1.4em;
+    font-size: 1.3em;
   }
 }
 
